feat: système status 5 états + composants MDX stylisés
- 5 status clairs: actif, pause, stable, maintenance, archive
- StatusBadge avec tooltip hover
- StatusLegend dépliable sur page projets
- markdownComponents pour ReactMarkdown (icônes sections)
- Migration 15 fichiers MDX (en-cours→actif, terminé→archive)
- Traductions FR/EN des labels et descriptions

--- a/content/projects/asset-pipeline.mdx
+++ b/content/projects/asset-pipeline.mdx
@@ -5,7 +5,7 @@ date: "2025-09-01"
 category: "école"
 tags: ["C++", "CMake", "Asset Management", "Game Engine"]
 featured: false
-status: "terminé"
+status: "archive"
 thumbnail: "/images/projects/asset-pipeline-thumb.jpg"
 gallery: []
 ---
