--- a/content/projects/audio-editor.mdx
+++ b/content/projects/audio-editor.mdx
@@ -5,7 +5,7 @@ date: "2025-11-01"
 category: "école"
 tags: ["C++", "XAudio2", "DSP", "Audio", "WAV"]
 featured: false
-status: "terminé"
+status: "archive"
 thumbnail: "/images/projects/audio-editor-thumb.jpg"
 gallery: []
 ---
