--- a/content/projects/fbx-parser.mdx
+++ b/content/projects/fbx-parser.mdx
@@ -5,7 +5,7 @@ date: "2025-10-01"
 category: "école"
 tags: ["C++", "CMake", "3D", "Binary Parsing", "FBX"]
 featured: false
-status: "terminé"
+status: "archive"
 thumbnail: "/images/projects/fbx-parser-thumb.jpg"
 gallery: []
 ---
