--- a/content/projects/game-engine-gtech.mdx
+++ b/content/projects/game-engine-gtech.mdx
@@ -5,7 +5,7 @@ date: "2025-06-01"
 category: "école"
 tags: ["C++", "OpenGL", "ImGui", "Game Engine", "ECS"]
 featured: true
-status: "terminé"
+status: "archive"
 thumbnail: "/images/projects/game-engine-thumb.jpg"
 gallery: []
 ---
