--- a/content/projects/hype.mdx
+++ b/content/projects/hype.mdx
@@ -5,7 +5,7 @@ date: "2026-01-25"
 category: "travail"
 tags: ["TypeScript", "React Native", "Next.js", "PostgreSQL", "Mobile"]
 featured: false
-status: "en-cours"
+status: "actif"
 thumbnail: "/images/projects/hype-thumb.jpg"
 gallery: []
 ---
