--- a/content/projects/multithreading-game.mdx
+++ b/content/projects/multithreading-game.mdx
@@ -5,7 +5,7 @@ date: "2025-09-15"
 category: "école"
 tags: ["C++", "Threading", "CMake", "SFML", "Performance"]
 featured: false
-status: "terminé"
+status: "archive"
 thumbnail: "/images/projects/multithreading-thumb.jpg"
 gallery: []
 ---
