--- a/content/projects/simd-optimization.mdx
+++ b/content/projects/simd-optimization.mdx
@@ -5,7 +5,7 @@ date: "2025-10-15"
 category: "école"
 tags: ["C++", "SIMD", "SSE", "AVX", "Performance", "Math"]
 featured: false
-status: "terminé"
+status: "archive"
 thumbnail: "/images/projects/simd-thumb.jpg"
 gallery: []
 ---
