--- a/content/projects/llm-automation.mdx
+++ b/content/projects/llm-automation.mdx
@@ -5,7 +5,7 @@ date: "2026-02-01"
 category: "travail"
 tags: ["Python", "FastAPI", "LangGraph", "TypeScript", "PostgreSQL", "AI"]
 featured: true
-status: "en-cours"
+status: "actif"
 thumbnail: "/images/projects/llm-automation-thumb.jpg"
 gallery: []
 ---
