--- a/content/projects/physics-engine.mdx
+++ b/content/projects/physics-engine.mdx
@@ -5,7 +5,7 @@ date: "2025-12-01"
 category: "école"
 tags: ["C++", "Raylib", "Physics", "Simulation", "Math"]
 featured: false
-status: "en-cours"
+status: "actif"
 thumbnail: "/images/projects/physics-engine-thumb.jpg"
 gallery: []
 ---
