fix: correct dates + update statuses + remove 2 projects
Dates:
- llm-automation: 2026-02-01 → 2026-01-10
- hype: 2026-01-25 → 2025-10-25

Statuses updated:
- daw-custom: stable → pause
- obsidian-web: stable → maintenance
- wsl-terminal: stable → pause
- process-tracker: stable → pause
- template-ecs: stable → archive

Removed (not for portfolio):
- physics-engine
- game-engine-gtech

--- a/content/projects/daw-custom.mdx
+++ b/content/projects/daw-custom.mdx
@@ -5,7 +5,7 @@ date: "2026-01-28"
 category: "perso"
 tags: ["C++", "JUCE", "Audio", "DSP", "CMake"]
 featured: true
-status: "stable"
+status: "pause"
 github: "https://github.com/Kikii95/daw-custom"
 thumbnail: "/images/projects/daw-custom-thumb.jpg"
 gallery: []
