--- a/content/projects/obsidian-web.mdx
+++ b/content/projects/obsidian-web.mdx
@@ -5,7 +5,7 @@ date: "2025-11-28"
 category: "perso"
 tags: ["TypeScript", "React", "PWA", "Vercel", "GitHub API"]
 featured: true
-status: "stable"
+status: "maintenance"
 github: "https://github.com/Kikii95/obsidian-web"
 buildUrl: "https://obsidian-web.vercel.app"
 thumbnail: "/images/projects/obsidian-web-thumb.jpg"
