--- a/content/projects/template-ecs.mdx
+++ b/content/projects/template-ecs.mdx
@@ -5,7 +5,7 @@ date: "2025-10-09"
 category: "perso"
 tags: ["C++", "ECS", "Game Engine", "SFML", "Architecture"]
 featured: true
-status: "stable"
+status: "archive"
 github: "https://github.com/Kikii95/template-ECS"
 buildUrl: "https://github.com/Kikii95/template-ECS/releases/latest"
 thumbnail: "/images/projects/ecs-thumbnail.jpg"
