--- a/content/projects/wsl-terminal.mdx
+++ b/content/projects/wsl-terminal.mdx
@@ -5,7 +5,7 @@ date: "2025-12-10"
 category: "perso"
 tags: ["Tauri", "Rust", "React", "Terminal", "WSL"]
 featured: true
-status: "stable"
+status: "pause"
 github: "https://github.com/Kikii95/wsl-terminal"
 thumbnail: "/images/projects/wsl-terminal-thumb.jpg"
 gallery: []
