--- a/content/projects/process-tracker.mdx
+++ b/content/projects/process-tracker.mdx
@@ -5,7 +5,7 @@ date: "2025-12-17"
 category: "perso"
 tags: ["Tauri", "Rust", "React", "DevTools", "Cross-platform"]
 featured: false
-status: "stable"
+status: "pause"
 github: "https://github.com/Kikii95/process-tracker"
 thumbnail: "/images/projects/process-tracker-thumb.jpg"
 gallery: []
