fix: dates 2026, techs collapsed, update featured projects
- hype + obsidian-web dates → 2026-02-01
- Technologies filter collapsed by default
- Featured: obsidian-web, system-monitor, template-ecs only

--- a/content/projects/daw-custom.mdx
+++ b/content/projects/daw-custom.mdx
@@ -4,7 +4,7 @@ description: "Station de travail audio personnelle pour mashups et sound design 
 date: "2026-01-28"
 category: "perso"
 tags: ["C++", "JUCE", "Audio", "DSP", "CMake"]
-featured: true
+featured: false
 status: "pause"
 github: "https://github.com/Kikii95/daw-custom"
 thumbnail: "/images/projects/daw-custom-thumb.jpg"
