--- a/content/projects/llm-automation.mdx
+++ b/content/projects/llm-automation.mdx
@@ -4,7 +4,7 @@ description: "Plateforme SaaS pour créer des workflows d'automatisation IA avec
 date: "2026-01-10"
 category: "travail"
 tags: ["Python", "FastAPI", "LangGraph", "TypeScript", "PostgreSQL", "AI"]
-featured: true
+featured: false
 status: "actif"
 thumbnail: "/images/projects/llm-automation-thumb.jpg"
 gallery: []
