--- a/content/projects/wsl-terminal.mdx
+++ b/content/projects/wsl-terminal.mdx
@@ -4,7 +4,7 @@ description: "Émulateur de terminal moderne pour WSL2 avec multi-onglets et out
 date: "2025-12-10"
 category: "perso"
 tags: ["Tauri", "Rust", "React", "Terminal", "WSL"]
-featured: true
+featured: false
 status: "pause"
 github: "https://github.com/Kikii95/wsl-terminal"
 thumbnail: "/images/projects/wsl-terminal-thumb.jpg"
