feat(content): enrich project descriptions and fix home i18n
- Fix: home page now passes locale to getAllProjects()
- Enrich 6 projects with README details (FR+EN):
  obsidian-web, system-monitor, template-ecs, wsl-terminal,
  process-tracker, daw-custom
- Add Requirements/Cahier des charges to 5 school projects (FR+EN):
  asset-pipeline, audio-editor, fbx-parser, multithreading-game,
  simd-optimization

--- a/content/projects/en/asset-pipeline.mdx
+++ b/content/projects/en/asset-pipeline.mdx
@@ -19,6 +19,20 @@ School project GTech3, 5 weeks. Team of 3, role: core pipeline architect.
 
 Modern games require sophisticated asset management. This project implements a production-ready pipeline for game resources.
 
+## Requirements
+
+Project objectives:
+- Implement async resource loading system
+- Automatic memory management with reference counting
+- Hot-reload support for iterative development
+- Build pipeline for asset optimization
+
+Constraints:
+- Modern C++ (C++17 minimum)
+- No external dependencies for core
+- Complete technical documentation
+- Mandatory unit tests
+
 ## Stack
 
 - C++
