--- a/content/projects/en/audio-editor.mdx
+++ b/content/projects/en/audio-editor.mdx
@@ -19,6 +19,20 @@ School project GTech3, 6 weeks. Team of 3, role: DSP and audio engine developer.
 
 Exploring digital signal processing fundamentals through a practical audio editing application.
 
+## Requirements
+
+Project objectives:
+- Parse and play WAV files (PCM)
+- Real-time waveform display
+- Implement DSP effects (EQ, compression, reverb, delay)
+- Non-destructive editing with preview
+
+Constraints:
+- Windows audio API (XAudio2 or WASAPI)
+- WAV formats 8/16/24-bit, mono/stereo
+- Latency < 50ms for playback
+- Functional user interface
+
 ## Stack
 
 - C++
