--- a/content/projects/en/fbx-parser.mdx
+++ b/content/projects/en/fbx-parser.mdx
@@ -19,6 +19,20 @@ School project GTech3, 5 weeks. Team of 3, role: binary parser implementation.
 
 Understanding 3D file formats is essential in game dev. This project dives into the FBX binary specification.
 
+## Requirements
+
+Project objectives:
+- Parse FBX 7.x binary format
+- Extract mesh, materials and animation data
+- Reconstruct scene hierarchy
+- Handle zlib decompression
+
+Constraints:
+- No official FBX SDK usage
+- Support compressed and uncompressed files
+- Export to simple intermediate format
+- Documentation of parsed format
+
 ## Stack
 
 - C++
