--- a/content/projects/en/multithreading-game.mdx
+++ b/content/projects/en/multithreading-game.mdx
@@ -19,6 +19,20 @@ School project GTech3, 2 months. Team of 4, role: core systems developer.
 
 Focus on parallel processing and thread synchronization for real-time game systems.
 
+## Requirements
+
+Project objectives:
+- Parallelize game systems (render, physics, logic)
+- Thread-safe resource management
+- Implement a job system
+- Optimize for consistent frame times
+
+Constraints:
+- C++17/20 with std::thread
+- No detectable race conditions
+- Stable frame time < 16ms (60 FPS)
+- Performance profiling and documentation
+
 ## Stack
 
 - C++17/20
