--- a/content/projects/en/simd-optimization.mdx
+++ b/content/projects/en/simd-optimization.mdx
@@ -19,6 +19,20 @@ School project GTech3, optimization competition, 4 weeks. Individual project.
 
 Implementing math operations with SIMD intrinsics to achieve maximum throughput.
 
+## Requirements
+
+Project objectives:
+- Implement a SIMD math library (SSE/AVX)
+- Benchmark against scalar implementation
+- Achieve minimum 4x speedup
+- Fallback for non-SIMD platforms
+
+Constraints:
+- x86 intrinsics (no inline assembly)
+- SSE4.2 minimum support, AVX optional
+- Numerical precision tests
+- Optimization techniques documentation
+
 ## Stack
 
 - C++
