--- a/content/projects/fr/asset-pipeline.mdx
+++ b/content/projects/fr/asset-pipeline.mdx
@@ -19,6 +19,20 @@ Projet école GTech3, 5 semaines. Équipe de 3, rôle : architecte du pipeline c
 
 Les jeux modernes nécessitent une gestion d'assets sophistiquée. Ce projet implémente un pipeline production-ready pour les ressources de jeu.
 
+## Cahier des Charges
+
+Objectifs du projet :
+- Implémenter un système de chargement asynchrone de ressources
+- Gestion mémoire automatique avec reference counting
+- Support hot-reload pour le développement itératif
+- Pipeline de build pour optimisation des assets
+
+Contraintes :
+- C++ moderne (C++17 minimum)
+- Pas de dépendances externes pour le core
+- Documentation technique complète
+- Tests unitaires obligatoires
+
 ## Stack
 
 - C++
