--- a/content/projects/fr/audio-editor.mdx
+++ b/content/projects/fr/audio-editor.mdx
@@ -19,6 +19,20 @@ Projet école GTech3, 6 semaines. Équipe de 3, rôle : développeur DSP et mote
 
 Exploration des fondamentaux du traitement de signal numérique via une application d'édition audio pratique.
 
+## Cahier des Charges
+
+Objectifs du projet :
+- Parser et lire des fichiers WAV (PCM)
+- Affichage waveform en temps réel
+- Implémenter des effets DSP (EQ, compression, reverb, delay)
+- Édition non-destructive avec preview
+
+Contraintes :
+- API audio Windows (XAudio2 ou WASAPI)
+- Formats WAV 8/16/24-bit, mono/stereo
+- Latence < 50ms pour la lecture
+- Interface utilisateur fonctionnelle
+
 ## Stack
 
 - C++
