--- a/content/projects/fr/fbx-parser.mdx
+++ b/content/projects/fr/fbx-parser.mdx
@@ -19,6 +19,20 @@ Projet école GTech3, 5 semaines. Équipe de 3, rôle : implémentation du parse
 
 Comprendre les formats de fichiers 3D est essentiel en dev jeux. Ce projet plonge dans la spécification binaire FBX.
 
+## Cahier des Charges
+
+Objectifs du projet :
+- Parser le format binaire FBX 7.x
+- Extraire mesh, matériaux et données d'animation
+- Reconstruire la hiérarchie de scène
+- Gérer la décompression zlib
+
+Contraintes :
+- Pas d'utilisation du SDK FBX officiel
+- Support des fichiers compressés et non-compressés
+- Export vers format intermédiaire simple
+- Documentation du format parsé
+
 ## Stack
 
 - C++
