--- a/content/projects/fr/multithreading-game.mdx
+++ b/content/projects/fr/multithreading-game.mdx
@@ -19,6 +19,20 @@ Projet école GTech3, 2 mois. Équipe de 4, rôle : développeur systèmes core.
 
 Focus sur le traitement parallèle et la synchronisation de threads pour des systèmes de jeu temps réel.
 
+## Cahier des Charges
+
+Objectifs du projet :
+- Paralléliser les systèmes de jeu (rendu, physique, logique)
+- Gestion de ressources thread-safe
+- Implémenter un job system
+- Optimiser pour des frame times constants
+
+Contraintes :
+- C++17/20 avec std::thread
+- Pas de race conditions détectables
+- Frame time stable < 16ms (60 FPS)
+- Profiling et documentation des performances
+
 ## Stack
 
 - C++17/20
